static/css/style.css
/* ... */
.game-cards .card-content {
    padding: 10px 8px 0;
    overflow: hidden;
    font-family: "BlenderPro-Thin";
}

.game-cards .card-action {
    font-family: "BlenderPro-Medium";
    padding: 0 0 5px 0;
}

.like {
    padding: 0 !important;
    height: 24px;
}

.like-icon {
    padding: 0 !important;
    height: 24px;
    width: 24px;
}

.like-text {
    color: white;
    padding: 0 0 0 5px !important;
}

.like-icon:hover {
    animation: pulse 1.5s infinite;
    animation-timing-function: linear;   
}

@keyframes pulse {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.2);
    }
    100% {
        transform: scale(1);
    }
}


.like-text {
    padding-left: 0;
}

.game-cards .card-content .card-title,
.sm-screen-card .card-title {
    font-family: "BlenderPro-Book";
    letter-spacing: 1px;
    line-height: 1;
    font-size: 18px;
}

.game-cards .card-title.white-text {
    margin-bottom: 0;
}

.game-cards .add-btn {
    width: 40px;
}

.sm-screen-card .card-panel {
    width:95%; 
    margin: 32px auto; 
    padding: 10px 24px;
}

.sm-screen-card .row {
    margin-bottom: 0;
}

#gameImageCard {
    height: 125px; 
    background-color: #231424;
    margin-left: 8.3333333333%;
}

#gameImageCard img {
    height: 125px; 
    width: 275px; 
    margin: auto; 
    border-radius: 10px;
}

#btnCard {
    height: 125px;
    width: 64px; 
    background-color: #231424;
    z-index: 10;
}

.sm-screen-card .like {
    margin-top: 20px;
}

.thumbs-up-sm-screen {
    font-size: 30px !important;
    background-color: whitesmoke;
    border-radius: 50%;
    padding: 5px;
}

.like-text-sm {
    margin-top: 16px;
    font-size: 15px;
}

#gameCardContent .card {
    height: 100px; 
    margin: 10px auto; 
    border: 3px solid #f608ea;
}

#gameCardContent .card-title {
    padding-top: 5px;
    letter-spacing: 1px;
}

#gameCardContent .card-content {
    padding: 5px;
}

.fab.fa-linux,
.fab.fa-windows,
.fab.fa-apple {
    font-size: 14px;
    padding: 2px;
}

/* ---------------------------------------------- Search query - no results */

#noResults img {
    width: 150px;
    height: 150px;
}

#noResults .divider {
    width:50%; 
    margin: 25px auto;
}

#noResults p {
    width: 80%; 
    margin: auto;
}

#noResults .btn {
    margin-top: 25px;
}


/* ---------------------------------------------- Game Cards - Favourite tag */

.game-cards .card-panel {
    position: relative;
}

.game-card.hide-on-small-only .card-panel {
    padding: 20px;
}

.favourite-tag--games-page .disabled,
.favourite-tag-sm .disabled,
.favourite-tag .disabled {
    color: white !important;
    background-color: rgb(46 34 68 / 94%)  !important;
    border: 4px solid white;
}

.favourite-tag--games-page {
    position: absolute; 
    top: 5%; 
    bottom: 0; 
    left: 1%; 
    right: 0;
    width: 170px; 
    height: 65px;  
    z-index: 20;
}

.favourite-tag--games-page .btn-large {
    position: relative; 
    width: 170px; 
    height: 65px; 
    padding: 0 15px;
}

.favourite-tag--games-page .stars {
    position: absolute; 
    top: -10px; 
    bottom: 0; 
    left: 15px; 
    right: 0; 
    height: 35px;
}

.favourite-tag--games-page .stars i {
    font-size: 14px; 
    height: 35px;
}

.favourite-tag--games-page .recommended-text {
    position: relative;
}

.favourite-tag--games-page .recommended-text i {
    font-size: 16px; 
    line-height: 40px; 
    margin-left: 5px;
}

.favourite-tag--games-page .recommended-text p {
    position: absolute; 
    top: -5px; 
    bottom: 0; 
    height: 35px; 
    margin: 0;
    font-family: 'BlenderPro-Medium';
    font-size: 12px; 
}

.favourite-tag--games-page-sm {
    position: absolute; 
    top: 2%; 
    bottom: 0; 
    left: 1%; 
    right: 0;
    width: 150px; 
    height: 50px; 
    z-index: 20;
}

.favourite-tag--games-page-sm .btn-large {
    position: relative; 
    width: 150px; 
    height: 50px; 
    padding: 0 15px;
}

.favourite-tag--games-page-sm .stars {
    position: absolute; 
    top: -15px; 
    bottom: 0; 
    left: 15px; 
    right: 0; 
    height: 35px;
}

.favourite-tag--games-page-sm .stars i {
    height: 25px;
    font-size: 12px; 
}

.favourite-tag--games-page-sm .recommended-text {
    position: relative;
}

.favourite-tag--games-page-sm .recommended-text i {
    font-size: 14px; 
    line-height: 20px; 
    margin-left: 0; 
    margin-right: 3px;
}

.favourite-tag--games-page-sm .recommended-text p {
    position: absolute; 
    top: -15px; 
    bottom: 0; 
    height: 35px; 
    margin: 0;
    font-family: 'BlenderPro-Medium'; 
    font-size: 10px; 
}

/* ---------------------------------------------- Favourites page */

.favourites {
    width: 90%; 
    margin: auto;
}

.favourites .card-panel {
    padding: 20px;
}

.favourites .card-image {
    padding: 15px;
}

.favourites img {
    width: 560px; 
    height: 260px;
}

.favourites .card-content {
    width: 70%;
}

.favourites .card-title h4 {
    margin-top: 0; 
    font-size: 28px;
    cursor: pointer;
}

.favourites .card-content p {
    padding-bottom: 5px; 
    font-size: 16px;
}

.favourites .divider {
    margin-top: 10px;
}

.favourites .game-summary {
    padding-top: 20px;
}

.see-review-btn {
    position: absolute; 
    top: 25%; 
    bottom: 0; 
    right: 0; 
    left: 75%;
}

.floating-add-btn {
    position: absolute; 
    top: 7%; 
    bottom: 0; 
    right: 0; 
    left: 82%;
    width:50px;
    height: 50px;
}

.like-outer {
    position: absolute; 
    top: 10%; 
    bottom: 0; 
    right: 0; 
    left: 75%;
}

.like-inner {
    position: relative;
}

.like-inner i {
    margin-left: 5px; 
    position: absolute; 
    top: 0; 
    bottom: 0; 
    left: 0; 
    right: 0;
}

.like-inner span {
    width: 25px; 
    margin-left: 35px;
    font-size: 18px;
}

.favourite-tag {
    position: absolute; 
    top: 50%; 
    bottom: 0; 
    right: 0; 
    left: 75%;
}
/* ... */

